<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity"
    android:orientation="vertical">

    <TextView
    	style="?android:attr/listSeparatorTextViewStyle"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/about_author"/>
    <TextView
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/about_author_text"/>
    <TextView
    	style="?android:attr/listSeparatorTextViewStyle"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/about_contact"/>
    <TextView
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/about_contact_text"/>
    <TextView
    	style="?android:attr/listSeparatorTextViewStyle"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/email"/>
    <TextView
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/my_email"/>
    <TextView
    	style="?android:attr/listSeparatorTextViewStyle"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/phone"/>
    <TextView
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/my_phone"/>
    <TextView
    	style="?android:attr/listSeparatorTextViewStyle"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/rate"/>
    <TextView
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/ask_rate"/>
    <Button android:id="@+id/button_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate" />

</LinearLayout>
