<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
    	android:id="@+id/action_about"
    	android:orderInCategory="101"
    	android:showAsAction="never"
    	android:title="@string/action_about"/>
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        android:inputType="phone"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:visible="true"
        android:actionViewClass="android.widget.SearchView" />
    <item
    	android:id="@+id/action_waypoint"
    	android:orderInCategory="1"
    	android:title="@string/action_waypoint"
    	android:icon="@drawable/ic_action_place"
    	android:showAsAction="ifRoom"
    	android:visible="true" />
    <item
    	android:id="@+id/action_directions"
    	android:orderInCategory="3"
    	android:title="@string/action_directions"
    	android:icon="@drawable/ic_action_directions"
    	android:showAsAction="ifRoom"
    	android:visible="true" />
</menu>
