<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical" 
	android:padding="12dip">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <EditText 
	        android:id="@+id/input_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text" />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <TextView 
	        android:id="@+id/waypoint_title"
	        android:text="@string/waypoint_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
		<EditText
			android:id="@+id/input_lat"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:inputType="numberDecimal"
			android:layout_weight="0.5"
			android:textSize="13sp" />
		<EditText
			android:id="@+id/input_lng"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:inputType="numberDecimal"
			android:layout_weight="0.5"
	        android:textSize="13sp" />
		<Button
			android:id="@+id/button_current_loc"
			android:text="@string/button_current_loc"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:onClick="buttonCurrentLoc" />
	</LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<TextView
			android:id="@+id/waypoint_lat"
			android:layout_width="0dp"
	      	android:layout_height="wrap_content"
	      	android:text="@string/waypoint_lat"
	      	android:layout_weight="0.5" />
		<TextView
		    android:id="@+id/waypoint_lng"
		    android:layout_width="0dp"
	      	android:layout_height="wrap_content"
	      	android:text="@string/waypoint_lng"
	      	android:layout_weight="0.5" />
		<TextView
		    android:id="@+id/blank"
		    android:layout_width="0dp"
	      	android:layout_height="wrap_content"
	      	android:layout_weight="0.5" />
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
		<Button
			android:id="@+id/button_submit"
			android:text="@string/button_submit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="buttonSubmit" />
	</LinearLayout>
</LinearLayout>
